# fastcontains

./: Cargo.toml  readme.md
benches/: contains.rs
src/: lib.rs
