[package]
name = "fastcontains"
version = "1.0.0"
edition = "2024"

description = "fastcontains, the faster contains"
repository = "https://github.com/Alleexxi/fastcontains"
authors = ["viewmatrix"]
readme = "readme.md"
license = "MIT"
keywords = ["optimization"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "contains"
harness = false
